src/objects/PlayerRegistration__c.object
<CustomObject>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Direction__c</fullName>
        <label>Start Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>n</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>ne</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>se</fullName>
                </value>
                <value>
                    <fullName>s</fullName>
                </value>
                <value>
                    <fullName>sw</fullName>
                </value>
                <value>
                    <fullName>w</fullName>
                </value>
                <value>
                    <fullName>nw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WorldRegistration__c</fullName>
        <label>WorldRegistration</label>
        <referenceTo>WorldRegistration__c</referenceTo>
        <relationshipLabel>PlayerRegistration</relationshipLabel>
        <relationshipName>PlayerRegistration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isGDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGDI</label>
        <type>Checkbox</type>
    </fields>
    <label>PlayerRegistration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PlayerRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlayerRegistration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>